# whale_tracker

./: .env.example  .env.postgres  .gitignore  ARCHITECTURE_OVERVIEW.md  BUSINESS_ALIGNMENT_ANALYSIS.md  CIRCUIT_BREAKER_INTEGRATION.md  COMMANDS_CHEAT_SHEET.md  CONTEXT_FOR_NEW_BRANCH.md  DATA_QUALITY_VALIDATOR_QUICK_REF.md  DATA_QUALITY_VALIDATOR_README.md  DATA_QUALITY_VALIDATOR_SUMMARY.md  DEPLOYMENT.md  FINAL_COMPLETION_CHECKLIST.md  FINAL_REPORT.md  FINAL_VERIFICATION.md  FLOATING_POINT_FIX.md  GIT_COMMIT_PHASE_2_4.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTION_FOR_NEXT_BRANCH.md  INTEGRATION_SUMMARY.md  NEXT_BRANCH_QUICK.md  NEXT_SESSION_START.md  PHASE5_PULL_GUIDE.md  PHASE_2_1_COMPLETE.md  PHASE_2_1_INSTRUCTIONS.md  PHASE_2_2_COMPLETE.md  PHASE_2_2_INSTRUCTIONS.md  PHASE_2_3_INSTRUCTIONS.md  PHASE_2_4_COMPLETE.md  PHASE_2_LST_COMPLETE.md  PHASE_3_1_COMPLETE.md  POSTGRESQL_SETUP.md  PRE_TESTING_CHECKLIST.md  PROJECT_COMPLETE.md  PROJECT_FILE_MAP.md  PR_DESCRIPTION.md  QUICKSTART.md  QUICK_BUSINESS_SUMMARY.md  (+48 more)
lp_health_tracker/: .env.example  .env.example_with_explanations  .gitignore  2.2.0  2.3.0  3.10.0  CHANGELOG.md  DEPENDENCY_INJECTION_COMPLETE.md  DEVELOPMENT_PRINCIPLES_RU.md  GAS_INTEGRATION_COMPLETE.md  GEMINI_PLAN_COMPLETED.md  HIGH_PRIORITY_INTEGRATION_COMPLETED.md  HISTORICAL_BACKFILLER_README.md  IL_BASICS.md  IMPROVEMENT_PLAN.md  INTEGRATION_COMPLETE.md  JSON_LOADING_FIX_SUMMARY.md  LICENSE  PRICE_SYSTEM_MIGRATION.md  PROGRESS_WEEK1.md  PYDANTIC_INTEGRATION_COMPLETED.md  QUICKSTART.md  README.md  REGRESSION_TESTING.md  TESTING_PLAN_GAS_REFACTOR.md  TEST_FIXES_APPLIED.md  UNIFICATION_SUMMARY.md  VALIDATION_CHECKLIST.md  VALIDATION_SCRIPTS.md  WINDOWS_TEST_INSTRUCTIONS.txt  XFAIL_TRANSFORMATION_REPORT.py  analyze_settings_dependencies.py  check_settings.py  check_unified_system.py  comprehensive_diagnostics.py  critical_fix_wallet_addresses.py  demo_storage_comparison.py  demo_xfail_example.py  demo_xfail_transformation.py  diagnose_json.py  (+101 more)
lp_health_tracker/_context/: .PROTECTED  GIT_WORKFLOW.md  (+5 more)
(+480 files in other folders)
