[tool.pytest.ini_options]
# Pytest configuration for LP Health Tracker
# ==========================================

# Test discovery settings
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output settings
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--ignore=quick_test.py",
    "--ignore=quick_check.py",
    "--ignore=test_stage2_live_data.py",
    "--ignore=test_stage2_final.py",
    "--ignore=test_gemini_fixes.py",
    "--ignore=demo_reference_bug.py",
    "--ignore=test_bug_fix.py"
]

# Markers for test categorization
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (component interaction)",
    "live_data: Tests requiring external APIs (CoinGecko, DeFi Llama)",
    "stage1: Stage 1 milestone validation tests",
    "stage2: Stage 2 milestone validation tests",
    "regression: Regression tests for fixed bugs",
    "slow: Slow tests (may take several seconds)",
    "performance: Performance tests",
    "api: API-related tests",
    "gas_calculator: Gas calculation related tests",
    "end_to_end: End-to-end workflow tests"
]

# Minimum version
minversion = "6.0"

# Test paths to ignore
norecursedirs = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "node_modules"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lp-health-tracker"
version = "0.1.0"
description = "LP Health Tracker - DeFi Position Monitor"
authors = [{name = "DeFi-RAG Project", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncio",
    "aiohttp",
    "pandas", 
    "pydantic",
    "python-dotenv",
    "APScheduler",
    "web3",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "pytest-cov"
]
